find_package(SWIG)
if (SWIG_FOUND)
	if(SWIG_VERSION VERSION_GREATER 2.0.4)
		MARK_AS_ADVANCED(SWIG_DIR SWIG_EXECUTABLE SWIG_VERSION)
		INCLUDE(${SWIG_USE_FILE})
		add_subdirectory(swig/java)
		add_subdirectory(swig/php)
	else()
		message("SWIG version 2.0.5 is required, found ${SWIG_VERSION} - skipping java wrapper generation")
	endif()
else()
	message("SWIG not found - skipping wrapper generation")
endif()
